# IntentRecogniser

./: CMakeLists.txt  README.md  intent_recognizer.cpp
src/: CMakeLists.txt  intent_recognizer.cpp  intent_recognizer.h
test/: CMakeLists.txt  intent_recognizer_test.cpp
